# bolus_ai

./: .dockerignore  .gitignore  AGENTS.md  AUDIT_BASAL_FORECAST.md  AUDIT_COMPRESSION_FILTER.md  AUDIT_LABS_SHADOW_LEARNING_AUTOSENS.md  AUDIT_REPORT.md  AUDIT_REPORT_REMEDIATION.md  AUDIT_REPORT_V2.md  AUDIT_RISK_REGISTER_REMEDIATION.md  AUDIT_UI_REPORT.md  AUDIT_VISION_RESTAURANT_UI.md  CLAUDE.md  GUIA_EJECUCION_LOCAL.md  GUIDE_RENDER_MIGRATIONS.md  LEARNING.md  MANUAL_USUARIO.md  ML_LIFECYCLE.md  NAS_SETUP.md  PROJECT_ANALYSIS.md  README.md  README_BOT.md  REFACTOR_FRONTEND_PLAN.md  REFACTOR_PLAN.md  RENDER_SETUP.md  USER_AUTH_GUIDE.md  VERIFICATION.md  build_render.sh  check_db.py  debug_output.txt  diagnose_ns.py  docker-compose.yml  ema_output.txt  iob_fix_output.txt  iob_test_results.txt  nginx.conf  output.txt  plan_fixes.md  pytest.ini  readme.md  (+8 more)
backend/: Dockerfile  alembic.ini  apply_hotfix_migration.py  check_db.py  check_targets.py  configure_ns_manual.py  debug_forecast_trigger.py  debug_gemini.py  debug_import.py  debug_ml.py  debug_output.txt  debug_settings_v2.py  debug_supplies_standalone.py  debug_train.py  fix_settings_json.py  fix_target_db.py  force_create_tables.py  inspect_db.py  inspect_settings.py  math_test.py  math_test_num.py  output.txt  pyproject.toml  pytest.ini  repro_ns.py  reproduce_iob.py  reproduce_issue.py  requirements.txt  start.sh  test_collect.py  test_db_out.txt  test_default_sort.py  test_fix.py  test_fix_query.py  test_fix_query_no_json.py  test_fix_verification.py  test_logs.txt  test_migration_fix.py  test_output.txt  (+8 more)
(+618 files in other folders)
